<android.support.design.widget.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_bar_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    app:theme="@style/ThemeOverlay.AppCompat.Light"
    >

  <include layout="@layout/toolbar"/>

</android.support.design.widget.AppBarLayout>