...
  <!--Social Media-->
  <string name="aptoide_url">http://www.aptoide.com/</string>
  <string name="facebook">Facebook</string>
  <!--General-->
  <string name="all_button_feedback_send">Send feedback</string>
  <string name="install">Install</string>
  <string name="open">Open</string>
  <string name="all_title_ad">Ad</string>
  <string name="not_now_button">NOT NOW</string>
  <string name="continue_button">CONTINUE</string>
  <!-- Permission pop-ups messages -->
  <string name="uninstall_button">Uninstall</string>
  <string name="access_to_get_accounts_rationale">You need to allow access to Get Accounts</string>
...
  <string name="cancel">Cancel</string>
  <!--Strings for shortcuts-->
  <string name="iab_button_next">Next</string>
  <string name="shortcut_button_search">Search</string>
  <string name="shortcut_button_my_store">My Store</string>
  <string name="shortcut_button_pick_app">Surprise me</string>
  <string name="all_button_ok">OK</string>
  <string name="all_button_got_it">GOT IT</string>
  <string name="all_button_know_more">KNOW MORE</string>
  <!--URL -->
  <string name="my_stores_login_message">Log in now and start sharing your apps!</string>
  <string name="all_url_terms_conditions" translatable="false">https://www.aptoide.com/legal/terms?header=0&amp;menu=0</string>
  <string name="all_url_privacy_policy" translatable="false">https://www.aptoide.com/legal/privacy?header=0&amp;menu=0</string>
...
