<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:id="@+id/action_search"
      android:icon="@drawable/ic_search"
      android:orderInCategory="1"
      android:title="@string/search"
      app:actionLayout="@layout/searchview_layout"
      app:actionViewClass="android.support.v7.widget.SearchView"
      app:showAsAction="always|collapseActionView"/>

</menu>
