...
      android:layout_height="wrap_content"
      android:background="?attr/toolbarBackground"
      app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

  </com.google.android.material.appbar.AppBarLayout>
...
              android:imeOptions="actionDone"
              android:inputType="text"
              android:singleLine="true"
              />

          <EditText
              android:id="@+id/edit_store_description"
              style="@style/Aptoide.TextView.Regular.S.BlackAlpha"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/create_store_description_hint"
              android:visibility="gone"
              tools:visibility="visible"
...
