...
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/create_user_choose_username"
              />

          <EditText
              android:id="@+id/create_user_username_inserted"
              style="@style/Aptoide.TextView.Regular.S"
              android:layout_width="match_parent"
              android:layout_height="43dp"
              android:layout_marginTop="@dimen/padding_very_small"
              android:background="@drawable/rounded_corners_reactions"
              android:hint="@string/create_user_username"
...
