...
          <LinearLayout
              android:id="@+id/my_account_storeinfo"
              android:layout_width="wrap_content"
              android:layout_height="74dp"
              android:layout_marginTop="16dp"
              android:layout_toEndOf="@id/my_account_store_avatar"
              android:layout_toLeftOf="@+id/my_account_edit_user_store"
              android:layout_toRightOf="@id/my_account_store_avatar"
              android:layout_toStartOf="@+id/my_account_edit_user_store"
              android:gravity="center_vertical"
              android:orientation="vertical"
              >

...
